--- a/src/app/gitsearch-form/gitsearch-form.component.css
+++ b/src/app/gitsearch-form/gitsearch-form.component.css
@@ -1,4 +1,8 @@
 .form-group{
-    margin-left: 430px;
+    margin-left: 5px;
     margin-top: 100px;
+}
+.form-group label{
+    margin-left: 350px;
+    font-size: 35px;
 }
