add new changes

--- a/src/app/gitsearch/gitsearch.component.html
+++ b/src/app/gitsearch/gitsearch.component.html
@@ -1,5 +1,6 @@
 <div class="container">
     <div class="form">
+     <p>{{user.name}} </p>
         <app-gitsearch-form></app-gitsearch-form>
     </div>
 </div>
