--- a/src/app/repo/repo.component.html
+++ b/src/app/repo/repo.component.html
@@ -1,1 +1,5 @@
-<p>repo works!</p>
+<div class="jumbotron">
+    <h1 class="display-4 text-center">Repo</h1>
+    <hr class="my-4">
+    <p class="lead text-center">An Angular app</p>
+  </div>
