--- a/src/app/gitsearch-form/gitsearch-form.component.css
+++ b/src/app/gitsearch-form/gitsearch-form.component.css
@@ -1,6 +1,11 @@
+.form{
+    background-color: darkgrey;
+}
+
 .form-group{
     margin-left: 5px;
     margin-top: 100px;
+    
 }
 .form-group label{
     margin-left: 350px;
