--- a/src/app/gitsearch-form/gitsearch-form.component.html
+++ b/src/app/gitsearch-form/gitsearch-form.component.html
@@ -1,6 +1,8 @@
-<div class="col md 8 form-group">
-    <label for="Search here" name="Search" id="Search">Search here</label><br>
-    <input type="text" class="form-control form-control-Ig" id="text" name="text" >
-    <br>
-    <button type="submit" name="submit" id="submit" class="bg-info">Search</button>
+<div class="container">
+    <div class="col md 12 form-group">
+        <label for="Search here" name="Search" id="Search">Search here</label><br>
+        <input type="text" class="form-control form-control-Ig" id="text" name="text" >
+        <br>
+        <button type="submit" name="submit" id="submit" class="bg-info">Search</button>
+    </div>
 </div>
