--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,3 +1,15 @@
-<nav class="navbar navbar-expand-lg navbar-primary " style="background-color: aquamarine;  ">
-    <h1>GITSEARCH</h1>
-</nav>
+
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="background-color: aquamarine;  ">
+    <a class="navbar-brand" routerLink="gitsearch"><b>GITSEARCH</b></a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="navbar-nav">
+        <a class="nav-item nav-link active" routerLink="gitsearch" routerLinkActive='active'>gitsearch<span class="sr-only">(current)</span></a>
+        <a class="nav-item nav-link"routerLink="/user" routerLinkActive='active'>Users</a>
+        <a class="nav-item nav-link"routerLink="/repo" routerLinkActive='active'>Repos</a>
+      </div>
+    </div>
+  </nav>
+
