--- a/src/app/gitsearch-form/gitsearch-form.component.html
+++ b/src/app/gitsearch-form/gitsearch-form.component.html
@@ -3,6 +3,7 @@
         <label for="Search here" name="Search" id="Search">Search here</label><br>
         <input type="text" class="form-control form-control-Ig" id="text" name="text" >
         <br>
-        <button type="submit" name="submit" id="submit" class="bg-info"(click)='goToUrl(user)'>Search</button>
+        <button type="submit" name="submit" id="submit" class="bg-info">Search</button>
     </div>
 </div>
+<!-- (click)='goToUrl(user)' -->
