--- a/src/app/repo/repo.component.html
+++ b/src/app/repo/repo.component.html
@@ -1,5 +1,21 @@
-<div class="jumbotron">
-    <h1 class="display-4 text-center">Repo</h1>
-    <hr class="my-4">
-    <p class="lead text-center">An Angular app</p>
-  </div>
+<div class="col-md-8 card">
+        
+              <div class="head">
+                  <h3>Repositories</h3>
+              </div>
+              <!-- <div class="panel-body " *ngFor="let repo of repos ">
+                  <h3>
+                      Title: {{repo.name}} <a href="{{repo.html_url}} " target="_blank " class="btn btn-md btn-warning pull-right ">View this project on github</a>
+                  </h3>
+                  <p style="font-size: 20px; "> Description: {{repo.description|titlecase}}</p>
+                  <hr style="height:2px;width:50%;color:gray;background-color:gray">
+                  <ul>
+                      <li style=" font-size: 20px; float: left; ">
+                          {{repo.language}}
+                      </li>
+                  </ul>
+              </div> -->
+          
+        </div>
+
+
