--- a/src/app/repo/repo.component.html
+++ b/src/app/repo/repo.component.html
@@ -3,7 +3,7 @@
               <div class="head">
                   <h3>Repositories</h3>
               </div>
-              <!-- <div class="panel-body " *ngFor="let repo of repos ">
+              <div  *ngFor="let repo of repos ">
                   <h3>
                       Title: {{repo.name}} <a href="{{repo.html_url}} " target="_blank " class="btn btn-md btn-warning pull-right ">View this project on github</a>
                   </h3>
@@ -14,7 +14,7 @@
                           {{repo.language}}
                       </li>
                   </ul>
-              </div> -->
+              </div>
           
         </div>
 
